export type TitleType = 'MOVIE' | 'SERIES';
